quark/test/quark/AST/Errors/typeNotDeclared-003.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: -> Void {}
// CHECK:Error: type 'Void' not found!
